--- a/Sections/Company.tex
+++ b/Sections/Company.tex
@@ -14,6 +14,6 @@
 
 Kiekvienam praktikantui priskiriamas mentorius, dirbantis prie praktikantui priskirto projekto. Mentorius užima aukštesnę nei jaunesniojo programuotojo poziciją. Mentorius padėdavo kilus klausimams, peržiūrėjo programinio kodo pakeitimus, pateikdavo pasiūlymus, kaip galima toliau tobulėti.
 
-Praktika buvo vykdoma hibridiniu būdu - darbas iš ofiso nėra privalomas, tačiau norint gauti, kaip galima greičiau, atsakymus į savo klausimus, rekomenduojama ateiti į ofisą. Kiekvieną trečiadienį komanda susirenka ofise, tad yra puiki galimybė susipažinti su savo komandos nariais. Ofisas įsikūręs adresu Švitrigailos g. 13.
+Praktika buvo vykdoma hibridiniu būdu - darbas iš ofiso nėra privalomas, tačiau norint gauti atsakymus į savo klausimus kuo greičiau, rekomenduojama ateiti į ofisą. Kiekvieną trečiadienį komanda susirenka ofise, tad yra puiki galimybė susipažinti su savo komandos nariais. Ofisas įsikūręs adresu Švitrigailos g. 13.
 
 Praktikos metu įmonė suteikė kompiuterinę įrangą praktikantams, reikalingas licencijas norint pradėti darbuotis su nauju projektu. Praktikos metu buvo kompensuotas komandos susitikimo renginys (\emph{angl. Team building}). Ofise praktikantui yra priskiriama komandos kabinete esanti vieta, norint dirbti iš ofiso. \enquote{Bentley systems} įmonėje atlikta praktika buvo apmokama.
