--- a/Sections/Intro.tex
+++ b/Sections/Intro.tex
@@ -9,7 +9,7 @@ Kiekviena rotacija šiose komandose trunka pusmetį ir programuotojams leidžia 
 Šios praktikos \textbf{uždaviniai}:
 \begin{enumerate}
     \item Pagilinti Kotlin programavimo kalbos žinias rašant programinį kodą.
-    \item Išmokti naudotis “Jetpack Compose” Android įrankių rinkiniu skirtu kurti vartotojo sąsają.
+    \item Išmokti naudotis “Jetpack Compose” Android įrankių rinkiniu, skirtu kurti vartotojo sąsają.
     \item Susipažinti su lanksčiojo programavimo projektų valdymo metodu “Kanban”.
     \item Susipažinti su švaraus ir kokybiško kodo rašymo principais ir geriausiomis praktikomis. 
     \item Įgyvendinti naują funkcionalumą Android programėlėje.
