--- a/Sections/Technologies.tex
+++ b/Sections/Technologies.tex
@@ -2,7 +2,7 @@
 
 \subsection{Praktikos metu naudotos technologijos}
 Šiame poskyryje aprašomos technologijos, kurias naudojau praktikos metu ir pavyzdžiai, kur jos buvo naudojamos. 
-Atlikdamas praktiką mobiliųjų įrenginių kūrimo komandoje turėjau galimybę dirbti su įvairiomis pripažintomis ir naujausiomis mobiliųjų programėlių kūrimo technologijomis. Toliau aprašoma pagrindinių \enquote{Android} ir \enquote{iOS} technologijų, kuriomis naudojausi, apžvalga:
+Atlikdamas praktiką mobiliųjų įrenginių kūrimo komandoje, turėjau galimybę dirbti su įvairiomis pripažintomis ir naujausiomis mobiliųjų programėlių kūrimo technologijomis. Toliau aprašoma pagrindinių \enquote{Android} ir \enquote{iOS} technologijų, kuriomis naudojausi, apžvalga:
 
 \subsubsection{Kotlin}
 Kotlin yra viena iš populiariausių programavimo kalbų kuriant Android mobiliąsias programėles. Lyginant su Java programavimo kalba, Kotlin yra modernesnė, null reikšmių saugumu. Kotlin lengvai pritaikoma senesniuose projektuose, parašytuose su Java ir XML vartotojo sąsaja, paprasta atnaujinti seną kodo bazę. Sintaksės panašumas į kitas programavimo kalbas, padeda lengvai ir greita išmokti Kotlin programavimo kalbos pagrindus.
@@ -73,7 +73,7 @@ Visos praktikos metu Kotlin programavimo kalbą naudojau kurti naudotojo sąsajo
 
 
 \subsubsection{Swift}
-Swift yra galinga, tačiau nesunki pradedantiesiems programavimo kalba, kurią Apple sukūrė savo įrenginiams. Lyginant su \enquote{Objective-C}, Swift pasižymi švariu ir glaustu stiliumi, artimesniu natūraliai kalbai. Priešingai nei \enquote{Objective-C}, Swift atlieka daugiau automatinio atminties valdymo ir tipų tikrinimo, tai padeda išvengti gedimų ir klaidų, kurios dažniau pasitaiko \enquote{Objective-C} kalboje. Dėl šių priežasčių, dėmesio, programinį kodą  greita parašyti ir lengva prižiūrėti. Nors \enquote{Objective-C} dar naudojama esamuose projektuose, integruoti Swift nesunku net ir į itin senus projektus. Su Swift programavimo kalba galima rašyti programėles iPhone, iPad, MacBook, Apple watch įrenginiams. Neseniai atsiradusiam \enquote{Apple vision pro} prietaisui irgi yra galimybė kurti programas šia programavimo kalba. 
+Swift yra galinga, tačiau nesunki pradedantiesiems programavimo kalba, kurią Apple sukūrė savo įrenginiams. Lyginant su \enquote{Objective-C}, Swift pasižymi švariu ir glaustu stiliumi, artimesniu natūraliai kalbai. Priešingai nei \enquote{Objective-C}, Swift atlieka daugiau automatinio atminties valdymo ir tipų tikrinimo, tai padeda išvengti gedimų ir klaidų, kurios dažniau pasitaiko \enquote{Objective-C} kalboje. Dėl šių priežasčių, programinį kodą  greita parašyti ir lengva prižiūrėti. Nors \enquote{Objective-C} dar naudojama esamuose projektuose, integruoti Swift nesunku net ir į itin senus projektus. Su Swift programavimo kalba galima rašyti programėles iPhone, iPad, MacBook, Apple watch įrenginiams. Neseniai atsiradusiam \enquote{Apple vision pro} prietaisui irgi yra galimybė kurti programas šia programavimo kalba. 
 
 \subsubsection{SwiftUI}
 
