--- a/internship-report.tex
+++ b/internship-report.tex
@@ -67,8 +67,8 @@
 \textbf{Pasiūlymai įmonei}:
 \begin{enumerate}
     \item Įmonėje, šiuo metu, į praktikos pozicijas priimami tik programuotojai ir testuotojai. Būtų galima išplėsti praktikos pozicijų pasirinkimą, pridedant projektų vadovo, vartotojo sąsajos dizainerių pozicijas.
-    \item Atliekant praktiką, neteko susidurti su realių programinės įrangos, funkcionalumų įvertinimo iš vartotojų pusės. Bet 2 mėnesiai, manau, yra per mažas laiko tarpas, kad įgyvendintas funkcionalumas pasiektų vartotojus.
-    \item Pirmą kartą pamačius projektą, buvo nelabai aišku, koks jo pilnas funkcionalumas, didžiąją dalį funkcionalumo atradau atliekant programinio kodo pakeitimus. Galima praktikantams, prieš pradedant rašyti kodą, pristatyti projekto funkcionalumą.
+    \item Atliekant praktiką, neteko susidurti su realių programinės įrangos, funkcionalumų įvertinimo iš vartotojų pusės. Bet 2,5 mėnesių, manau, yra per mažas laiko tarpas, kad įgyvendintas funkcionalumas pasiektų vartotojus.
+    \item Pirmą kartą pamačius projektą, buvo nelabai aišku, koks jo pilnas funkcionalumas, didžiąją dalį funkcionalumo atradau atlikdamas programinio kodo pakeitimus. Galima praktikantams, prieš pradedant rašyti kodą, pristatyti projekto funkcionalumą.
 \end{enumerate}
 % \begin{enumerate}
 %     % \item Grupinių projektinių darbų pristatymų metu per daug skiriama dėmesio sistemos funkcionalumui ir pristatymo sklandumui. Dėl to dažniausiai nukenčia sistemos testavimas -- jaunieji programuotojai nerašo testų, kadangi tai nėra vertinama pristatymo metu.
